# Orbitpropagation

./: .gitignore  .gitmodules  CMakeLists.txt  GeoCoordinates.h  Orbitpropagation  README.md  SONATE.txt  calendar.cpp  calendar.h  geocoordinates.cpp  geocoordinates.h  main.cpp  orbitpropagation.h  task2_2.cpp  task2_2.h
Coordinates/: geocoordinates.cpp  geocoordinates.h
SGP4Propagator/: SGP4Propagator.cpp  SGP4Propagator.h
Uebung02_SGP4Propagator/: SGP4Propagator.h
calendars/: calendar.cpp  calendar.h
coordinates/: geocoordinates.cpp  geocoordinates.h
